--- a/index.css
+++ b/index.css
@@ -1,42 +1,38 @@
 .main-container{
-    display: flex;
+    overflow-x: hidden;
+   width: 100%;
+   height: 100%;
+    background-image: url("https://cdn4.vectorstock.com/i/1000x1000/98/73/front-end-development-it-web-banner-concept-vector-24929873.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 .navbar{
     background-color: #7d6683 !important;
     padding: 1%;
-    position: fixed;
-    top:0;
-    left:0;
     z-index: 100;
-    height: 100%;
-    width:16%;
-    align-self: center;
+    position:fixed;
+    top:0;
+    width: 100%;
 }
 .navbar-brand {
     color: aliceblue;
+    font-size: 100%;
 }
 .first-container{
+    width:100%;
     height: 100vh;
-    width:80%;
-    margin-left: 18%;
-    background-image: url("https://images-cdn.ubuy.co.in/634f5d077f94571384355d57-orenji-wall-collage-kit-aesthetic.jpg");
-    background-size: 100% 100%;
-   background-attachment: fixed;
-   background-position-x:0 ;
-   background-position-y:50% ;
-   background-size: cover;
-   z-index: 0;
+    z-index: 0;
 }
 p{
-    width: 55%;
-    font-size: 83pt;
+    font-size:9vw;
     position: relative;
     top:50%;
-    left: 5%;
     color: #5d325b;
     font-weight: bold;
     font-family: Inter-regular;
     background-color: #d4c1d362;
+    text-align: center;
 }
 .second-container{
     height: 100vh;
